samples/gke/load-balancing/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: default
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "config-default"}'
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: web
  type: NodePort
