samples/gke/load-balancing/web-ingress-static.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "STATIC_IP_NAME"
    ingress.gcp.kubernetes.io/pre-shared-cert: "gke-cert"
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: web
          servicePort: 8080
